# mmdeploy

configs/mmdet/detection/: detection_openvino_dynamic-320x320.py  detection_openvino_dynamic-416x416.py  detection_openvino_dynamic-512x512.py  detection_openvino_dynamic-608x608.py  detection_openvino_dynamic-640x640.py  detection_tensorrt-fp16_dynamic-64x64-320x320.py  detection_tensorrt-fp16_dynamic-64x64-416x416.py  detection_tensorrt-fp16_static-300x300.py  detection_tensorrt-fp16_static-416x416.py  detection_tensorrt-fp16_static-512x512.py  detection_tensorrt-fp16_static-640x640.py  detection_tensorrt_dynamic-64x64-320x320.py  detection_tensorrt_dynamic-64x64-416x416.py  detection_tensorrt_static-320x320.py  detection_tensorrt_static-416x416.py  detection_tensorrt_static-512x512.py  single-stage_ncnn_static-320x320.py  single-stage_ncnn_static-512x512.py  single-stage_ncnn_static-608x608.py  single-stage_ncnn_static-640x640.py
configs/mmdet/instance-seg/: instance-seg_openvino_dynamic-640x640.py  instance-seg_tensorrt-fp16_static-640x640.py
csrc/codebase/mmseg/: segment.cpp
csrc/core/: CMakeLists.txt
csrc/device/cpu/: CMakeLists.txt
csrc/model/: CMakeLists.txt
csrc/net/ncnn/: ncnn_net.cpp
csrc/preprocess/cpu/: CMakeLists.txt
demo/csrc/: CMakeLists.txt
demo/csrc/cpp/: pose_tracker_simcc.cpp
demo/java/: PoseTrack.java  Utils.java
mmdeploy/apis/: pytorch2onnx.py  visualize.py
mmdeploy/codebase/base/: task.py
mmdeploy/codebase/mmdet/deploy/: object_detection_model.py
tests/regression/: mmdet_full.yml
tools/: regression_test.py
(+15 files in other folders)
